[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/startScreen.gd" type="Script" id=1]
[ext_resource path="res://font/PressStart2P.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://imagens do jogo/IMG_0106 (1).PNG" type="Texture" id=3]
[ext_resource path="res://Scenes/wallpaperbetter.com_1024x600.jpg" type="Texture" id=4]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
size = 20
extra_spacing_top = 5
extra_spacing_bottom = 5
extra_spacing_char = 2
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 20
extra_spacing_top = 5
extra_spacing_bottom = 5
extra_spacing_char = 2
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 20
extra_spacing_top = 5
extra_spacing_bottom = 5
extra_spacing_char = 2
font_data = ExtResource( 2 )

[node name="startScreen" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -301.0
margin_right = 512.0
margin_bottom = 299.0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 515, 302 )
scale = Vector2( 1.00488, 1.00167 )
texture = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 475, 237 )
scale = Vector2( 0.491, 0.518942 )
texture = ExtResource( 3 )

[node name="startBtn" type="Button" parent="."]
margin_left = 416.0
margin_top = 273.0
margin_right = 633.0
margin_bottom = 309.0
theme = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Start"

[node name="controlBtn" type="Button" parent="."]
margin_left = 416.0
margin_top = 343.0
margin_right = 633.0
margin_bottom = 379.0
theme = SubResource( 1 )
custom_fonts/font = SubResource( 3 )
shortcut_in_tooltip = false
text = "Options"

[node name="quitBtn" type="Button" parent="."]
margin_left = 416.0
margin_top = 413.0
margin_right = 633.0
margin_bottom = 449.0
theme = SubResource( 1 )
custom_fonts/font = SubResource( 4 )
text = "Quit"

[connection signal="pressed" from="startBtn" to="." method="_on_startBtn_pressed"]
[connection signal="pressed" from="controlBtn" to="." method="_on_controlBtn_pressed"]
[connection signal="pressed" from="quitBtn" to="." method="_on_quitBtn_pressed"]
